--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <input type="text" id="tokenSymbol" placeholder="Enter Token Symbol" size="65">
                 <input type="int" id="value" placeholder="Enter Value for deposit/withdraw" size="65">
               </section>
+              <button class="btn btn-primary btn-lg btn-block mb-3" id="connectButton">Connect</button>
               <button class="btn btn-primary btn-lg btn-block mb-3" id="depositButton">Deposit</button>
               <button class="btn btn-primary btn-lg btn-block mb-3" id="withdrawButton">Withdraw</button>
               <button class="btn btn-primary btn-lg btn-block mb-3" id="getinfoButton">Get info</button>
