Added float to hex function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <h4 class="card-title">Compound</h4>
               <section>
                 <input type="text" id="tokenSymbol" placeholder="Enter Token Symbol" size="30">
-                <input type="int" id="value" placeholder="Enter Value for deposit/withdraw" size="30">
+                <input type="float" id="value" placeholder="Enter Value for deposit/withdraw" size="30">
               </section>
               <button class="btn btn-primary btn-lg btn-block mb-3" id="connectButton">Connect</button>
               <button class="btn btn-primary btn-lg btn-block mb-3" id="depositButton">Deposit</button>
